refactor: sonar cloud refactor