@@ -8,6 +8,9 @@ import co.udea.sitas.model.Booking;
 
 public class BookingMapper {
 
+    private BookingMapper() {
+    }
+
     public static BookingDTO toDTO(Booking booking){
         return BookingDTO.builder()
                 .bookingId(booking.getBookingId())
@@ -22,20 +25,7 @@ public class BookingMapper {
     }
 
 
-    public static Booking toEntity(BookingDTO bookingDTO){
-        return Booking.builder()
-                .bookingId(bookingDTO.getBookingId())
-                .passengerId(bookingDTO.getPassengerId())
-                .flightId(bookingDTO.getFlightId())
-                .bookingDate(bookingDTO.getBookingDate())
-                .basePrice(bookingDTO.getBasePrice())
-                .tax(bookingDTO.getTax())
-                .totalPrice(bookingDTO.getTotalPrice())
-                .isPaid(bookingDTO.isPaid())
-                .build();
-    }
-
     public static List<BookingDTO> toDTOList(List<Booking> bookings){
-        return bookings.stream().map(BookingMapper::toDTO).collect(Collectors.toList());
+        return bookings.stream().map(BookingMapper::toDTO).toList();
     }
 }
